fixed ulgy navbar tab alignment

--- a/client/home/home.css
+++ b/client/home/home.css
@@ -179,10 +179,3 @@
 	font-weight: 600;
 	line-height: 0.9;
 }
-
-#accueil-tab {
-	margin-left: -44px;
-}
-#program-tab {
-	margin-left: 44px;
-}
